--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,13 @@ body {
     flex-direction: column;
     gap: 10px;
 }
+
+#secretTouchArea {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    opacity: 0; /* Completely invisible */
+    z-index: 100;
+}
